--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer!</h1>
+	<p>As we all know in today's time science and technology 
+	are growing rapidly and in the upcoming time many of the
+		man's work will be carried out by technology so mastering
+		the best of it that is computer skills is a must thing to do.
+		and being a software developer helps you to grow as well as
+		to contribute to the IT sector for the upcoming generation.
+	
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
