--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Why I want to become a developer!</h1>
+	<h1>Why I want to become a developer?</h1>
 	<p>As we all know in today's time science and technology 
 	are growing rapidly and in the upcoming time many of the
 		man's work will be carried out by technology so mastering
